Update URLs to cerebriumai.github.io after repository transfer

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <h2>Installation Instructions</h2>
     <pre>
 # Add GPG key
-curl -fsSL https://hkhan161.github.io/cerebrium-apt/cerebrium.gpg | sudo gpg --dearmor -o /usr/share/keyrings/cerebrium-keyring.gpg
+curl -fsSL https://cerebriumai.github.io/cerebrium-apt/cerebrium.gpg | sudo gpg --dearmor -o /usr/share/keyrings/cerebrium-keyring.gpg
 
 # Add repository
-echo "deb [signed-by=/usr/share/keyrings/cerebrium-keyring.gpg] https://hkhan161.github.io/cerebrium-apt/ stable main" | sudo tee /etc/apt/sources.list.d/cerebrium.list
+echo "deb [signed-by=/usr/share/keyrings/cerebrium-keyring.gpg] https://cerebriumai.github.io/cerebrium-apt/ stable main" | sudo tee /etc/apt/sources.list.d/cerebrium.list
 
 # Install
 sudo apt update
